对串口接收数据做了加强，读取出错或者超时会关闭串口并重新打开。

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">SystemSelfCheck</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">系统自检</string>
+    <string name="action_settings">设置</string>
     <string name="content">系统自检</string>
     <string name="detail">警告：系统自检程序，请勿删除，谢谢！</string>
 
